fixed calendar change time frame bug and table border collapse issue

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -118,9 +118,10 @@ th:hover::after {
 }
 
 /* table */
-table {
+#task_table {
     padding: 0;
     margin-top: 10px;
+    border-collapse:collapse;
 }
 
 /* Tasks */
